make-up <alar#55297>

--- a/wiki/alar.wikitext
+++ b/wiki/alar.wikitext
@@ -1,11 +1,19 @@
 ==English==
 
-==Etymology==
-'''Latin''' ''[[ala]]'' + ''-r'' (adjectival suffix)
+== Adjective ==
+# ([[anatomy]]) of or relating to the [[armpit]]; [[axillary]]
+# Having, resembling, or composed of [[wing]]s or [[ala]]e
 
-# Having to do with [[wing]]s.
+==Noun==
+# A growth-regulating chemical sprayed on fruit trees; entire crop can be harvested at one time; [[daminozide]]
+
+==Etymology==
+'''Latin''' ''ala'' + ''-r'' (adjectival suffix)
 
 ====Derived Terms====
-
 # [[alar canal]]
+# [[alar chest]]
+# [[alar ligaments]]
 # [[alar foramen]]
+# [[greater alar cartilage]]
+# [[lesser alar cartilage]]
