/* Derived Terms */ <alar#55297>

--- a/wiki/alar.wikitext
+++ b/wiki/alar.wikitext
@@ -10,7 +10,7 @@
 ==Etymology==
 '''Latin''' ''ala'' + ''-r'' (adjectival suffix)
 
-====Derived Terms====
+==Derived Terms==
 # [[alar canal]]
 # [[alar chest]]
 # [[alar ligaments]]
