further making up <alar#55297>

--- a/wiki/alar.wikitext
+++ b/wiki/alar.wikitext
@@ -1,19 +1,19 @@
 ==English==
 
-== Adjective ==
+===Adjective===
 # ([[anatomy]]) of or relating to the [[armpit]]; [[axillary]]
 # Having, resembling, or composed of [[wing]]s or [[ala]]e
 
-==Noun==
-# A growth-regulating chemical sprayed on fruit trees; entire crop can be harvested at one time; [[daminozide]]
-
-==Etymology==
-'''Latin''' ''ala'' + ''-r'' (adjectival suffix)
-
-==Derived Terms==
+====Derived Terms====
 # [[alar canal]]
 # [[alar chest]]
 # [[alar ligaments]]
 # [[alar foramen]]
 # [[greater alar cartilage]]
 # [[lesser alar cartilage]]
+
+===Noun===
+# A growth-regulating chemical sprayed on fruit trees; entire crop can be harvested at one time; [[daminozide]]
+
+===Etymology===
+'''Latin''' ''ala'' + ''-r'' (adjectival suffix)
