--- a/wiki/leap.wikitext
+++ b/wiki/leap.wikitext
@@ -60,7 +60,7 @@
 *[[Norwegian]]: [[sprang]], [[hopp]], [[hoppe]]
 *Portuguese: [[saltar]]
 *Romanian: [[a sări]], [[a sălta]]
-*Russian: [[скачок]], [[прыжок]]
+*Russian: [[скакать]], [[прыгать]]
 *Slovak: [[skočiť]]/[[skákať]], [[preskočiť]]/[[preskakovať]] ''(over something)''
 *Spanish: [[saltar]]
 *Swedish: [[hoppa]], [[springa]] (''older'')
