--- a/wiki/leap.wikitext
+++ b/wiki/leap.wikitext
@@ -98,6 +98,7 @@
 *[[Latin]]: [[saltus]] ''m''
 *Polish: [[sus]] ''m'' (1,2)
 *Portuguese: [[salto]] ''m'', [[pulo]] ''m''
+*Russian: [[скачок]], [[прыжок]]
 *Slovak: [[skok]]
 *Spanish: [[salto]]
 *Swedish: [[hopp]] ''n'' (1), [[språng]] ''n'' (1)
