+Geological usage <dike#47740>

--- a/wiki/dike.wikitext
+++ b/wiki/dike.wikitext
@@ -4,6 +4,7 @@
 
 #(''also spelled'' [[dyke]]) A barrier of stone or earth used to hold back water and prevent flooding.
 #(''rare'') Variant spelling of [[dyke]], a lesbian.
+#(''Geology'') A body of once molten [[igneous]] [[rock]] that was injected into older rocks in a manner that crosses bedding planes.
 
 ====Translations====
 ''For translations in the sense of "lesbian", see [[dyke]].''
