--- a/wiki/plug.wikitext
+++ b/wiki/plug.wikitext
@@ -10,6 +10,7 @@ plugs.
 # A worthless horse. [Slang, U.S.].
 # ([[Building]]) A block of wood let into a wall, to afford a hold for nails.
 # A mention of a product (usually a book, film or play) in an interview, or an interview which features one or more of these.
+# (Geology) A body of once molten [[rock]] that hardened in a volcanic vent. Usually round or oval in shape.
 
 *Breech plug ([[Gun.]]), in breech-loading guns, the metal plug or cylinder which closes the aperture in the breech, through which the gun is loaded. Plug board 
 *Fire plug, a street [[hydrant]] to which hose may be attached.([[U.S.]])
