--- a/wiki/plutonic.wikitext
+++ b/wiki/plutonic.wikitext
@@ -14,6 +14,9 @@
 '''Pluton'''
 #A body of once molten rock that cooled below the earth's surface. The term implies a ''large'' body. Smaller instances are called [[dike]]s, [[sill]]s, or [[plug]]s.
 
+===Synonyms===
+:intrusive, irruptive
+
 ===Related words===
 :''See'' [[Rock]], [[Mineral]]
 
