--- a/wiki/pantheism.wikitext
+++ b/wiki/pantheism.wikitext
@@ -1,1 +1,1 @@
-The belief that the universe, it's phenomena and laws, are divine and should be revered. This view identifies the universe with God but denies any personality or transcendence of such a God. Examples of pantheists are the ancient Greek Stoics, Lao Tzu and Spinoza.
+The belief that the universe, it's phenomena and laws, are divine and should be revered. This view identifies the universe with God but denies any personality or transcendence of such a God.
