--- a/wiki/buffoon.wikitext
+++ b/wiki/buffoon.wikitext
@@ -4,6 +4,7 @@ A person usually becomes a buffoon either through natural disorganisation and cl
 
 == See also ==
 *[[Pretending to be stupid]]
+*[[Boris Johnson]]
 
 [[Category:Comedy]]
 {{stub}}
