--- a/wiki/pantheism.wikitext
+++ b/wiki/pantheism.wikitext
@@ -1,1 +1,1 @@
-The belief that the universe is divine. Pantheism identifies the universe with God but denies any personality or transcendence of such a God.
+The belief that the universe is divine and should be revered. Pantheism identifies the universe with God but denies any personality or transcendence of such a God.
