/* Adjective */ Wikify "feldspathoid" so I can add article. <feldspar#63923>

--- a/wiki/feldspar.wikitext
+++ b/wiki/feldspar.wikitext
@@ -25,7 +25,7 @@
 
 ===Adjective===
 #Feldspathic: Containing feldspar.
-#Feldspathoid: Resembling a feldspar.
+#[[Feldspathoid]]: Resembling a feldspar. Also another mineral group.
 
 ===Related words===
 :''See'' [[Rock]], [[Mineral]], [[Granite]]
