--- a/wiki/plutonic.wikitext
+++ b/wiki/plutonic.wikitext
@@ -18,6 +18,11 @@
 :intrusive, irruptive
 
 ===Related words===
-:''See'' [[Rock]], [[Mineral]]
+*[[Rock]]
+*[[Mineral]]
+
+===Homophone===
+
+[[platonic]]
 
 [[Category:Mineralogy]]
