--- a/wiki/International_System_of_Units.wikitext
+++ b/wiki/International_System_of_Units.wikitext
@@ -1,11 +1,10 @@
 =English=
 
 #The [[standard]] set of basic [[unit]]s of [[measurement]], to be used in [[scientific]] literature [[worldwide]]
-
 #:Abbreviated [[SI]]
 
 
 ===See Also===
 
 *[[international]]
-*[[system]]*
+*[[system]]
