--- a/wiki/SI.wikitext
+++ b/wiki/SI.wikitext
@@ -1,88 +1,7 @@
-==Translingual==
-'''Si'''<br>(''chemistry'') symbol for [[silicon]]
+==Abbreviation==
+#The abbreviation for ''Système International d'Unités'' or the [[International System of Units]], commonly known as the [[metric]] system.
+#: see [[Wiktionary_Appendix:SI_units|Appendix on SI Units]]
 
-----
-==French==
-''si''
-
-===Conjunction===
-# [[if]].
-
-===Interjection===
-# affirmative or exclamative form of [[yes]]
-
-----
-==Interlingua==
-''si''
-
-===Adverb===
-# [[yes]]
-
-----
-==Italian==
-''si''
-
-===Indefinite pronoun===
-#[[one]], [[you]], [[we]], [[they]], [[people]]
-#:'''Note: In this sense,''' ''si'' '''is often translated using the passive in English.'''
-#:Examples:
-#::*''Non si deve parlare così'' (One/You/We/They/People shouldn't speak like that)
-#::*''Si parla italiano qui'' (Italian is spoken here ''or'' One/You/We/They/People speak(s) Italian here)
-
-===Reflexive pronoun===
-#(''impersonal'') [[oneself]]; (''masculine'') [[himself]]; (''feminine'') [[herself]]; (''plural'') [[themselves]]; (''reciprocal'') [[each other]], [[one another]]
-#:Examples:
-#::*''Giovanni si è fatto male'' (Giovanni has hurt himself)
-#::*''Carlo e Laura si amano'' (Carlo and Laura love each other)
-#:'''Note: With some verbs,''' ''si'' '''is not translated in English.'''
-#:Examples:
-#::*''Marco si è rotto il braccio'' (Marco has broken his arm)
-#::*''Si è svegliata alle nove'' (She woke up at nine)
-
-===Pronoun===
-#(''the so-called'' '''[[si passivante]]''', ''used to form the passive voice of a verb'') [[it]] (''but also see note below'')
-#:Example: ''Si dice che Maria voleva uccidere Giovanni'' (It is said that Maria wanted to kill Giovanni)
-#:'''Note: In this sense,''' ''verb'' + ''si'' '''is often translated as''' ''become'' '''or''' ''get'' + ''past participle'' '''in English'''.
-#:Examples:
-#::*''Ci vuole un po' di tempo per abituarsi'' (It takes a while to become accustomed)
-#::*''A Luca piace ubriacarsi'' (Luca likes to get drunk)
-
-====Note====
-*When ''si'' is part of an infinitive, it can be placed before it as a separate word, but more often it is attached to the end.  In this case, the final -e of the infinitive is dropped, or, in the case of infinitives ending in -rre, the final -re is dropped.  Examples: ''amare'' + ''si'' = ''amarsi''; ''ridurre'' + ''si'' = ''ridursi''.  
-
-===Often confused with===
-# [[sì#Italian|sì]]
-
-----
-== Slovak ==
-=== Verb ===
-'''[[byť#Slovak|byť]]''' (second person singular: '''si''')
-# (you) [[are]], (thou) [[art]]
-=== Personal Pronoun ===
-'''si''' ''or'' '''[[sebe#Slovak|sebe]]'''
-
-Replaces the the [[dative]] of a personal pronoun when the [[subject]] is of the same [[person]] as the dative [[object]]. Roughly comparable with ''to oneself'' or ''for oneself''.
-:'''Kupujem ''si'' topánky.'''&ndash;''I am buying "me" shoes.''
-:'''Komu kupuješ topánky? Sebe.'''&ndash;''Who are you buying the shoes for? Myself.''
-----
 ==Spanish==
-''si''
-
-===Conjunction===
-# [[if]].
-
-====Often confused with====
-# [[sí#Spanish|sí]]
-
-----
-==[[Volapük]]==
-''si''
-
-===Interjection===
-# [[yes]].
-----
-==Nevbosh==
-===Conjunction===
-#[[if]]
-
-[[pl:si]]
+===Abbreviation===
+#[[Sinaloa]] (Mexican state)
