--- a/wiki/earth.wikitext
+++ b/wiki/earth.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Noun===
 '''earth'''
-# Our [[planet]], [[third]] out from the [[Sun]] (see [[w::Earth]]).
+# '''Earth''' Our [[planet]], [[third]] out from the [[Sun]] (see [[w::Earth]]).
 # (''Uncountable'') Any general [[rock]]-based material.
 # (''Alchemy'') One of the four basic elements (see [[w::Classical_element]]).
 # (''Taoist'') One of the five basic elements (see [[w:Five_Elements]]).
