--- a/wiki/Kuiper_belt.wikitext
+++ b/wiki/Kuiper_belt.wikitext
@@ -1,14 +1,14 @@
 ==English==
 ===Etymology===
-Named after the astronomer [[w:Gerard_Kuiper|Gerard Kuiper]] (1905-1973); and ''belt'' to be similar to [[Astroid Belt]].
+Named after the astronomer [[w:Gerard_Kuiper|Gerard Kuiper]] (1905-1973); and ''belt'' to be similar to [[Asteroid Belt]].
 
 ===Pronunciation===
 IPA: [[WEAE]] /ˈkaɪ.pɚ.bɛlt/
 
-Pronunciation notes: ''Kuiper'' is a Dutch surname, so it could be pronunced "authentically" in the Dutch manner (...someone who knows Dutch specify, please...).  However, Gerard Kuiper himself used an American pronunciation.
+Pronunciation notes: ''Kuiper'' is a Dutch surname, so it could be pronounced authentically in the Dutch manner (...someone who knows Dutch specify, please...).  However, Gerard Kuiper himself used an American pronunciation.
 
 ===Noun===
-A region of space between 30 and 50 AU from the sun, roughly confined within a thick band around the ecliptic.  This area is populated by many thousands of ''trans-Neptunians'', of which Pluto is the largest known.
+A region of [[space]] between 30 and 50 [[AU]] from the sun, roughly confined within a thick band around the [[ecliptic]].  This area is populated by many thousands of [[trans-Neptunians]], of which [[Pluto]] is the largest known.
 
 ====Translations====
 *Finnish: Kuiperin [[vyöhyke]]
