/* Etymology */ <Kuiper belt#40477>

--- a/wiki/Kuiper_belt.wikitext
+++ b/wiki/Kuiper_belt.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Named after the astronomer [[w:Gerard_Kuiper|Gerard Kuiper]] (1905-1973); and ''belt'' to be similar to [[Asteroid Belt]].
+Named after the astronomer [[w:Gerard_Kuiper|Gerard Kuiper]] (1905-1973); and ''belt'' to be similar to "[[asteroid belt]]".
 
 ===Pronunciation===
 IPA: [[WEAE]] /ˈkaɪ.pɚ.bɛlt/
