--- a/wiki/Hu.wikitext
+++ b/wiki/Hu.wikitext
@@ -11,9 +11,10 @@ Thus the five forms of the 3rd person pronouns make up the table:
 
 <table border="1" align="center" cellpadding="6">
 <tr><td>&nbsp;</th><th>Nom.<th>Gen. (adj)</th><th>posses</th><th>Acc.<th>refl</tr>
-<tr><td>male<td align="center">he<td align="center">his<td align="center">his<td align="center">him<td align="center">hiself</tr>
+<tr><td>male<td align="center">he<td align="center">his<td align="center">his<td align="center">him<td align="center">himself</tr>
 <tr><td>female<td align="center">she<td align="center">her<td align="center">hers<td align="center">her<td align="center">herself</tr>
 <tr><td>neutral<td align="center">hu<td align="center">hus<td align="center">hus<td align="center">hus<td align="center">huself</tr>
+<tr><td>neuter<td align="center">it<td align="center">its<td align="center">its<td align="center">it<td align="center">itself</tr>
 </table>
 
 Examples:
