/* Translations */ +polish from cotton candy article <candy floss#40499>

--- a/wiki/candy_floss.wikitext
+++ b/wiki/candy_floss.wikitext
@@ -14,6 +14,7 @@
 *German: [[Zuckerwatte]] ''f''
 *Hebrew: [[שערות סבתא]] (se'arot sav'ta) <!--This belongs at the Hebrew entry ''(literally: Granny's hair)'' -->
 *Italian: [[zucchero filato]] ''m''
+*Polish: [[wata cukrowa]] ''f''
 *Russian: [[сахарная вата|са́харная ва́та]] ''f''
 *Spanish: [[algodón de azúcar]] ''m''
 *Swedish: [[sockervadd]] ''c''
