/* Translations */ Japanese and second Spanish <meow#40943>

--- a/wiki/meow.wikitext
+++ b/wiki/meow.wikitext
@@ -15,10 +15,11 @@
 *French: [[miaou#French|miaou]] ''m''
 *German: [[Miau]] ''n'', [[Gemiaue]] ''n'', [[Gemaunze]] ''n''
 *Interlingua: [[miau]]
+*Japanese: [[にゃ]]
 *Korean: [[야옹]]
 *Romanian: [[miau]]
 *Russian: [[мяу]]
-*Spanish: [[miau]]
+*Spanish: [[miau]], [[maullido]]
 *Volapük: [[miov]]
 
 ===Intransitive verb===
