--- a/wiki/ordure.wikitext
+++ b/wiki/ordure.wikitext
@@ -7,3 +7,8 @@ Old French ''ord'' [[filthy]] < Latin ''[[horridus]]'' [[horrid]] + [[-ure]]
 ==Noun==
 
 # [[excrement]], [[dung]], [[shit]]
+
+
+===Homophone===
+
+* [[hor d'oeuvre]]
