--- a/wiki/bling_bling.wikitext
+++ b/wiki/bling_bling.wikitext
@@ -5,4 +5,4 @@
 ====Variant forms====
 *'''bling'''
 
-#(''slang'') [[Ostentatious]] [[jewelry]]/[[jewellery]].
+#(''slang'') Something that shows money, usually large items of jewelry (rings, necklaces, etc.)
