/* Noun */ -random reference to crack cocaine, fmt, tightened math defn <derivative#3245>

--- a/wiki/derivative.wikitext
+++ b/wiki/derivative.wikitext
@@ -15,8 +15,8 @@ Middle English from French ''dérivatif'' and Latin ''derivatus''. See [[derive]
 #Something based on another source
 #A word that derives from another one.
 #A financial instrument whose value depends on the value of something else, such as warrants, options etc.
-#A chemical, such as crack cocaine, that is derived from another
-#''(Mathematics):'' A function which expresses rates of change
+#A chemical derived from another
+#(''mathematics'') A function whose value is the instantaneous rate of change of a given function.
 
 ====Translations====
 *Dutch: [[afgeleide]] ''f'' (1), [[afleiding]] ''f'' (2)
