--- a/wiki/blueberry.wikitext
+++ b/wiki/blueberry.wikitext
@@ -20,6 +20,7 @@
 ====Translations====
 *Finnish: [[mustikka]] (1, 2)
 *French: [[myrtille]] (1)
+*Hebrew: [[אוכמניות]] ''f.pl.'' (1)
 *Slovene: [[borovnica]] ''f'' (1, 2)
 *Swedish: [[blåbär]] (1, 2)
 
