--- a/wiki/twain.wikitext
+++ b/wiki/twain.wikitext
@@ -8,6 +8,8 @@
 ===Quotes===
 * ''And whosoever shall compel thee to go a mile, go with him '''twain'''''. [[Matthew]] 5:41.
 * ''Til that the deeth departe shal us '''tweyne''''' ... [[Chaucer]], Knight's Tale, ln. 1632.  
+* ''And never the twain shall meet'' ... [[Kipling]]
+
 
 ===Related expressions===
-: [[In twain]], [[Twain cloud]], [[Mark twain]], [[Never the twain shall meet]]
+: [[In twain]], [[Twain cloud]], [[Mark twain]],
