--- a/wiki/conviction.wikitext
+++ b/wiki/conviction.wikitext
@@ -1,1 +1,11 @@
-{{stub}}
+==English==
+
+===Noun===
+'''conviction'''
+
+# A judgement of guilt in a court.
+# The state of being found or proved guilty.
+# The state of being convinced.
+
+====Related terms====
+*[[convict]]
