--- a/wiki/right-angled_triangle.wikitext
+++ b/wiki/right-angled_triangle.wikitext
@@ -1,12 +1,6 @@
 ==English==
+
 ===Noun===
-'''right-angled triangle''' (''plural'' '''right-angled triangles''')
+'''right-angled triangle'''
 
-#A [[triangle]] having a [[right angle]] as one of its interior angles.
-
-====Synonyms====
-*[[right triangle]] (''less common'')
-
-===See also===
-*[[acute-angled triangle]]
-*[[obtuse-angled triangle]]
+# Less common synonym of [[right triangle]].
