made primary.  Other triangle variants to be listed under triangle <right triangle#47784>

--- a/wiki/right_triangle.wikitext
+++ b/wiki/right_triangle.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Noun===
-'''right triangle''' (''plural'' '''right triangles''')
 
-#A less common synonym for a [[right-angled triangle]].
+===Noun Phrase===
+
+# A [[triangle]] having a [[right angle]] as one of its interior angles.
