modernized, +rel, "among three", not "between three", +proper noun <triangle#3856>

--- a/wiki/triangle.wikitext
+++ b/wiki/triangle.wikitext
@@ -1,17 +1,23 @@
-==Definition==
+==English==
 
-<b>triangle</b> (<i>noun</i>)
-# (<i>mathematics</i>) A three-sided [[polygon]].
-# (<i>music</i>) A metal [[percussion]] instrument suspended by a string and hit with a straight metal bar causing a resonant sound.
-# A [[relationship]] between three people.  (''love triangle'')
-
-==Pronunciation==
+===Pronunciation===
 :(US) SAMPA:/traI.eIN.g@l/
 
-==Notes==
+===Noun===
+'''triangle'''
+# (''mathematics'') A three-sided [[polygon]].
+# (''music'') A metal [[percussion]] instrument suspended by a string and hit with a straight metal bar causing a resonant sound.
+# A [[relationship]] among three people.
 
-see
-: [[isoceles_triangle]], [[equilateral_triangle]], [[right_triangle]]
+
+==Related Terms==
+*[[acute triangle]]
+*[[equilateral triangle]]
+*[[isoceles triangle]]
+*[[love triangle]]
+*[[obtuse triangle]]
+*[[right triangle]]
+*[[scalene triangle]]
 
 ===Translations===
 
@@ -36,3 +42,10 @@ see
 * [[Spanish]]: [[triángulo]] ''m''
 * [[Swedish]]: [[triangel]]
 * [[Turkish]]: [[üçgen]]
+
+===Proper Noun===
+'''Triangle'''
+
+# The area comprising the cities of Raleigh, Durham and Chapel Hill in the US state of North Carolina.  Used with ''the'' except when attributive.
+#: ''I moved to the Triangle two years ago.''
+#: ''Many Triangle residents enjoy iced tea.''
