--- a/wiki/acute-angled_triangle.wikitext
+++ b/wiki/acute-angled_triangle.wikitext
@@ -1,11 +1,1 @@
-==English==
-===Noun===
-'''acute-angled triangle'''
-
-#A [[triangle]] all of the [[angle]]s of which are [[acute]].
-
-====Synonyms====
-*[[acute triangle]]
-
-====Translations====
-*French: [[triangle acutangle]] ''m''
+#REDIRECT [[acute triangle]]
