--- a/wiki/acute_triangle.wikitext
+++ b/wiki/acute_triangle.wikitext
@@ -1,8 +1,9 @@
 ==English==
-===Noun===
-'''acute triangle''' (''plural'' '''acute triangles''')
 
-#An [[acute-angled triangle]].
+===Noun===
+'''acute triangle''', also '''acute-angled triangle''
+
+#A [[triangle]] all of the [[angle]]s of which are [[acute]].
 
 ====Translations====
-:''See'' [[acute-angled triangle]]
+*French: [[triangle acutangle]] ''m''
