/* Noun */ <acute triangle#47804>

--- a/wiki/acute_triangle.wikitext
+++ b/wiki/acute_triangle.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-'''acute triangle''', also '''acute-angled triangle''
+'''acute triangle''', also '''acute-angled triangle'''
 
 #A [[triangle]] all of the [[angle]]s of which are [[acute]].
 
