--- a/wiki/obtuse-angled_triangle.wikitext
+++ b/wiki/obtuse-angled_triangle.wikitext
@@ -1,11 +1,1 @@
-==English==
-===Noun===
-'''obtuse-angled triangle''' (''plural'' '''obtuse-angled triangles''')
-
-#A [[triangle]] one of the [[angle]]s of which is [[obtuse]].
-
-====Synonyms====
-*[[obtuse triangle]]
-
-====Translations====
-*French: [[triangle obtusangle]] ''m''
+#REDIRECT [[obtuse triangle]]
