made primary <obtuse triangle#47808>

--- a/wiki/obtuse_triangle.wikitext
+++ b/wiki/obtuse_triangle.wikitext
@@ -1,8 +1,9 @@
 ==English==
-===Noun===
-'''obtuse triangle''' (''plural'' '''obtuse triangles''')
 
-#An [[obtuse-angled triangle]].
+===Noun===
+'''obtuse triangle''', also '''obtuse-angled triangle'''
+
+#A [[triangle]] one of the [[angle]]s of which is [[obtuse]].
 
 ====Translations====
-:''See'' [[obtuse-angled triangle]]
+*French: [[triangle obtusangle]] ''m''
