/* Usage Note */ <isosceles triangle#64348>

--- a/wiki/isosceles_triangle.wikitext
+++ b/wiki/isosceles_triangle.wikitext
@@ -6,4 +6,4 @@
 # (''geometry'') A [[triangle]] having two sides equal.
 
 ===Usage Note===
-In strict mathematical usage, an isoceles triangle has ''at least'' two sides equal, since any triangle with three sides equal also has (any) two sides equal.  In this view, all [[equilateral]] triangles are also isoceles.  In casual usage, an isoceles triangle is understood to have the third side unequal to the other two.
+In strict mathematical usage, an isoceles triangle has ''at least'' two sides equal, since any triangle with three sides equal also has (any) two sides equal.  In this view, all [[equilateral triangle]]s are also isoceles.  In casual usage, an isoceles triangle is understood to have the third side unequal to the other two.
