--- a/wiki/triangle.wikitext
+++ b/wiki/triangle.wikitext
@@ -7,8 +7,7 @@
 '''triangle'''
 # (''mathematics'') A three-sided [[polygon]].
 # (''music'') A metal [[percussion]] instrument suspended by a string and hit with a straight metal bar causing a resonant sound.
-# A [[relationship]] among three people.
-
+# A [[love triangle]]
 
 ==Related Terms==
 *[[acute triangle]]
