/* Number */ removed smart-ass definition, added (somewhat overdone) usage note <9/11#64333>

--- a/wiki/9%2F11.wikitext
+++ b/wiki/9%2F11.wikitext
@@ -1,9 +1,14 @@
 =Translingual=
 
-==Number==
+==Translingual==
 
-# Fractional representation of the decimal .818181... where the repetition of the two digits continues ad infinitum
-# The eleventh day of September
+# The eleventh day of September, 2001.
+
+===Usage Note===
+
+The particular form "9/11" derives from the American habit of writing month first, then day, contrary to most other nations.  Because of the particular significance of 11 September 2001, the notation "9/11" is understood to refer to that date even outside the US.
+
+The notation "9/11" may, of course, also refer to a fraction, or to the 11th of September of any other year inside the US, or to the 9th day of November outside the US.
 
 ===See Also===
 [[w:September 11|Wikipedia article on September 11]]
