--- a/wiki/9%2F11.wikitext
+++ b/wiki/9%2F11.wikitext
@@ -8,4 +8,4 @@ The particular form "9/11" derives from the American habit of writing month firs
 
 
 ===See Also===
-[[w:September 11, 2001 attacks|Wikipedia article on September 11]]
+[[w:September 11, 2001 attacks|Wikipedia article on September 11, 2001]]
