--- a/wiki/triangle.wikitext
+++ b/wiki/triangle.wikitext
@@ -11,12 +11,19 @@
 
 ==Related Terms==
 *[[acute triangle]]
-*[[equilateral triangle]]
+*[[Bermuda Triangle]]
+*[[circular triangle]]
+*[[Devil's riangle]]
+*[[equilatetral triangle]]
+*[[eternal triangle]]
+*[[golden triangle]]
 *[[isoceles triangle]]
 *[[love triangle]]
+*[[North Atlantic Triangle]]
 *[[obtuse triangle]]
 *[[right triangle]]
 *[[scalene triangle]]
+*[[spherical triangle]]
 
 ===Translations===
 
