--- a/wiki/triangle.wikitext
+++ b/wiki/triangle.wikitext
@@ -13,7 +13,7 @@
 *[[acute triangle]]
 *[[Bermuda Triangle]]
 *[[circular triangle]]
-*[[Devil's riangle]]
+*[[Devil's Triangle]]
 *[[equilatetral triangle]]
 *[[eternal triangle]]
 *[[golden triangle]]
