--- a/wiki/%E5%92%8C%E8%A3%BD%E8%8B%B1%E8%AA%9E.wikitext
+++ b/wiki/%E5%92%8C%E8%A3%BD%E8%8B%B1%E8%AA%9E.wikitext
@@ -1,8 +1,8 @@
 '''''Wasei-eigo''''' (&#21644;&#35069;&#33521;&#35486; ''wasei eigo'', lit. "Made-in-Japan English") refers to [[English language|English]] constructions not in use in [[Anglophone]] countries nor by Anglophones, but only by speakers of [[Japanese language|Japanese]].
 
-One example is the word ''desk''. It seems like perfectly good English, but in Japan, it it is a title for a person. ''Tanaka-desk'' would be a reporter or editor in charge of a department at a newspaper (e.g. the city desk).
+One example is the word ''desk'' (&#12487;&#12473;&#12463;: ''desuku''). It seems like perfectly good English, but in Japan, it is a title for a person. ''Tanaka-desk'' would be a reporter or editor in charge of a department at a newspaper (for example, the city desk). Similarly, ''mansion'' (&#12510;&#12531;&#12471;&#12519;&#12531;: ''manshon'') refers not to a mansion, but an apartment. Wasei-eigo words can form compounds with Japanese words, for example, ''okushon'' (&#25014;&#12471;&#12519;&#12531;) combines ''oku'', meaning hundred million, with "mansion" to form a new word meaning "luxury apartment". Sometimes, two English words with their normal meanings will be combined to form a new compound word. One famous instance is ''famicom'' (&#12501;&#12449;&#12511;&#12467;&#12531;: ''famikon''), a [[portmanteau]] of "family" and "computer", meaning a [[video game]] system (especially, but not necessarily, ''the'' [[Famicom]], known to the rest of the world as the [[Nintendo Entertainment System]]).
 
-{{substub}}
+{{stub}}
 <!-- Todo:
 Examples (e.g. paper-driver)
 discussion of wasei-eigo terms as perceived by Japanese
@@ -11,7 +11,7 @@ distinction vs. [[Engrish]]
 ==See also==
 * [[Engrish]]
 
-==External Link==
+==External link==
 *[http://www.csse.monash.edu.au/~jwb/afaq/wasei-eigo.html Examples]
 
 [[ja:&#21644;&#35069;&#33521;&#35486;]]
