/* Translations */ <bovine spongiform encephalopathy#37087>

--- a/wiki/bovine_spongiform_encephalopathy.wikitext
+++ b/wiki/bovine_spongiform_encephalopathy.wikitext
@@ -22,6 +22,7 @@ A fatal, neurodegenerative disease of cattle, which is transmissable to humans t
 *[[Interlingua]]: [[Encephalopathia spongiforme bovin]]
 *[[Italian]]: [[encefalopatia spongiforme bovina]]
 *[[Japanese]]: 牛海綿状脳症 (うし かいめんじょう のうしょう ushi kaimenjou no ushou)
+*[[Lithuanian]]: [[galvijų kempiškoji encefalopatija]] ''f'', [[kempinligė]] ''f''
 *[[Latin]]: Encephalopathia spongiformis bovina
 *[[Slovak]]: [[choroba šialených kráv]]  ''f''
 *[[Spanish]]: [[encefalopatía spongiforma bovina]]
