--- a/wiki/ashtray.wikitext
+++ b/wiki/ashtray.wikitext
@@ -17,6 +17,7 @@
 *Czech: [[popelník]]  ''m''
 *Italian: [[portacenere]] ''m''
 *Japanese: [[灰皿]] ([[はいざら]])
+*Lithuanian: [[peleninė]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
