--- a/wiki/coin.wikitext
+++ b/wiki/coin.wikitext
@@ -20,7 +20,7 @@
 *[[Italian]]: [[moneta]] ''f''
 *[[Japanese]]: [[硬貨]] (こうか, kōka), [[コイン]] (koin)
 *[[Korean]]: [[동전]] [銅錢] (dongjeon)
-*Lithuanian: [[moneta]] ''f'' (1); [[žetonas]] ''m'' (2)
+*[[Lithuanian]]: [[moneta]] ''f'' (1); [[žetonas]] ''m'' (2)
 *[[Polish]]: [[moneta]], [[bilon]]
 *[[Portuguese]]: [[moeda]]
 *[[Romanian]]: [[monedă]] ''f''
