--- a/wiki/valley.wikitext
+++ b/wiki/valley.wikitext
@@ -9,4 +9,5 @@
 *Dutch: [[vallei]] ''f'', [[dal]] ''n''
 *French: [[vallée]] ''f''
 *German: [[Senke]] ''f''
+*Lithuanian: [[slėnis]] ''m''
 *Spanish: [[valle]] ''f''
