--- a/wiki/cent.wikitext
+++ b/wiki/cent.wikitext
@@ -48,6 +48,7 @@ Borrowed from Old French ''cent'', "hundred", from Latin [[centum]], from Proto-
 *Hebrew: [[סנט|סֶנְט]] ''or'' [[מאית|מֵאִית]] ''f''
 *Japanese: [[セント]] (sento)
 *Korean: [[센트]] (senteu)
+*Lithuanian: [[centas]] ''m''
 *Spanish: [[centavo]] ''m'', [[céntimo]] ''m''
 *Swedish: cent
 |}
