--- a/wiki/king.wikitext
+++ b/wiki/king.wikitext
@@ -34,6 +34,7 @@
 *{{ja}}: [[国王]] (こくおう, kokuō), [[王様]] (おうさま, ōsama), [[王]] (おう)
 *{{ko}}: [[임금]] (imgeum), [[왕]] [王] (wang)
 *{{la}}: [[rex]] ''m'' 
+*{{lt}}: [[karalius]] ''m''
 *{{mnc}}: ([[wang]])
 *{{no}}: [[konge]]
 *{{pl}}: [[król]] ''m''
