--- a/wiki/chest.wikitext
+++ b/wiki/chest.wikitext
@@ -13,6 +13,7 @@
 ====Translations====
 *French: [[poitrine]] ''f''
 *Italian: [[petto]] ''m''
+*{{ru}}: [[:ru:грудь|грудь]] /grud'/
 *{{sk}}: [[hruď]] ''f'', [[hrudník]] ''m''
 
 ====Related terms====
@@ -35,3 +36,6 @@
 *[[hope chest]]
 *[[treasure chest]]
 *[[war chest]]
+
+==[[multilingual associations]]==
+*[[Russian]]: [[keep]] [[:ru:честь|честь]] /chest'/ ([[honor]]) in '''chest'''
