--- a/wiki/czarina.wikitext
+++ b/wiki/czarina.wikitext
@@ -10,6 +10,7 @@
 * [[czar]]
 
 ====Translations====
+*[[Lithuanian]]: [[carienė]] ''f''
 *Russian: [[царица]] (tsaritsa)
 *Slovak: [[cárovná#Slovak|cárovná]]
 *Slovene: [[carica]] ''f''
