--- a/wiki/republic.wikitext
+++ b/wiki/republic.wikitext
@@ -22,6 +22,7 @@ From Latin '''[[respublica]]''', '''[[res publica]]''', literally ''"the public 
 *[[Italian]]: [[repubblica]] ''f''
 *[[Japanese]]: [[共和国]] ([[きょうわこく]], kyōwakoku)
 *Latin: [[respublica]]
+*[[Lithuanian]]: [[respublika]] ''f''
 *[[Polish]]: [[republika]] ''f'' [[rzeczpospolita]] ''f''
 *[[Portuguese]]: [[república]] ''f''
 *[[Russian]]: [[республика]]
