/* Translations */ <prime minister#6666>

--- a/wiki/prime_minister.wikitext
+++ b/wiki/prime_minister.wikitext
@@ -23,6 +23,7 @@ Latin ''primus'' + ''minister''
 *[[Interlingua]]: [[prime ministro]]
 *Italian: [[primo ministro]] ''m''
 *Japanese: [[首相]] ([[しゅしょう]], [[shushō]])
+*[[Lithuanian]]: [[premjeras]] ''m'', [[premjerė]] ''f'', [[ministras pirmininkas]] ''m'', [[ministrė pirmininkė]] ''f''
 *Polish: [[premier]] ''m''
 *Portuguese: [[primeiro ministro]] ''m''
 *Romanian: [[prim ministru]]
