--- a/wiki/admiral.wikitext
+++ b/wiki/admiral.wikitext
@@ -13,4 +13,5 @@ IPA: [[WEAE]] /ˈæd.mɚ.l̩/
 
 ===Translations===
 *[[Albanian]]: {n} admiral
+*[[Lithuanian]]: [[admirolas]] ''m'' (1, 3); [[flagmanas]] ''m'' (2)
 *[[Romanica]]: {n} <b>admiral</b>
