--- a/wiki/czar.wikitext
+++ b/wiki/czar.wikitext
@@ -14,5 +14,6 @@ From Latin [[caesar]].
 *[[czarina]]
 
 ====Translations====
+*[[Lithuanian]]: [[caras]] ''m''
 *Russian: [[царь]]
 *Slovak: [[cár#Slovak|cár]]
