--- a/wiki/chairman.wikitext
+++ b/wiki/chairman.wikitext
@@ -16,6 +16,7 @@
 *German: [[Vorsitz]] ''m''
 *[[Interlingua]]: [[presidente]], chairman
 *Norwegian: [[styreformann]], [[møteleder]]
+*[[Lithuanian]]: [[pirmininkas]] ''m'' (1), [[pirmininkė]] ''f'' (1)
 *Portuguese: [[presidente]] (da assembleia)
 *Romanian: [[director]]
 *Spanish: [[presidente]]
