--- a/wiki/enemy.wikitext
+++ b/wiki/enemy.wikitext
@@ -22,6 +22,7 @@
 *Italian: [[nemico]] ''m''
 *Japanese: [[敵]]
 *Korean: [[적]]
+*[[Lithuanian]]: [[priešas]] ''m'', [[priešininkas]] ''m''
 *Portuguese: [[inimigo]] ''m''
 *Russian: [[враг]] (vrag), [[противник]] ''m'' (protivnik)
 *Slovak: [[nepriateľ]] ''m''
