--- a/wiki/consider.wikitext
+++ b/wiki/consider.wikitext
@@ -9,8 +9,15 @@
 #: ''Consider yourself lucky, but consider your opponent skillful.''
 #: ''I considered the pie underdone.''
 
+====translation====
+*[[Hebrew]]: [[:he:לחשוב|לחשוב]] /lahshov/
+*[[Russian]]: [[:ru:рассматривать|рассматривать]] /rassmatrivat'/
+
 ===Related Terms===
 *[[considerable]]
 *[[considerate]]
 *[[consideration]]
 *[[reconsider]]
+
+==[[multilingual associations]]==
+*[[Russian]]: '''consider''' на коне сидя /na kone sidya/ (sitting [[on]] a [[horse]])
