--- a/wiki/firefighter.wikitext
+++ b/wiki/firefighter.wikitext
@@ -20,5 +20,6 @@ FA&Iuml;R-FAI-ter
 *German: [[Feuerwehrmann]] ''m'', [[Feuerwehrfrau]] ''f''
 *Greek: (pyrosvestes), (pyrosvestos)
 *Hungarian: [[tűzoltó]]
+*Lithuanian: [[gaisrininkas]] ''m'', [[gaisrininkė]] ''f''
 *Polish: [[strażak]] ''m''
 *Slovak: [[hasič]] ''m'', [[hasička]] ''m''
