--- a/wiki/celery.wikitext
+++ b/wiki/celery.wikitext
@@ -24,3 +24,5 @@
 *Portuguese: [[aipo]] ''m''
 *Russian: [[сельдерей]] ''m'' <!-- (sel'derey) this belongs on the page for the Russian word -->
 *Spanish: [[apio]] ''m''
+
+[[ro:Celery]]
