--- a/wiki/couple.wikitext
+++ b/wiki/couple.wikitext
@@ -10,3 +10,10 @@
 #See Couple-close.
 #One of the pairs of plates of two metals which compose a voltaic battery; -- called a voltaic couple or galvanic couple.
 #Two rotations, movements, etc., which are equal in amount but opposite in direction, and acting along parallel lines or around parallel axes.
+
+===translation===
+*[[Hebrew]]: [[:he:זוג|זוג]] /zug/ 
+*[[Russian]]: [[:ru:пара|пара]] /para/ 
+
+==[[multilingual associations]]==
+*[[Russian]]: '''couple''' капель /kapel/ (of [[drop]]s)
