--- a/wiki/dangerous.wikitext
+++ b/wiki/dangerous.wikitext
@@ -25,9 +25,9 @@
 *Greek: [[επικίνδυνος]] ''m'', [[επικίνδυνη]] ''f'', [[επικίνδυνο]] ''n''
 *Italian: [[pericoloso]] ''m'', [[pericolosa]] ''f''
 *Portuguese: [[perigoso]] ''m'', [[perigosa]] ''f''
-*Russian: [[опасный]] ''m'', [[опасная]] ''f'', [[опасное]] ''n''
+*Russian: [[:ru:опасный|опасный]] ''m'', [[:ru:опасная|опасная]] ''f'', [[:ru:опасное|опасное]] ''n''
 *Spanish: [[peligroso]] ''m'', [[peligrosa]] ''f''
 *Swedish: [[farlig]], [[farligt]]<!-- what's the difference?? -->
 
 ==Multilingual links==
-*[[English]]-[[Russian]]: [[дождь]] ([[rain]]) [[dangerous]] (опасный) [[для]] ([[for]]) роз ([[rose]]s)
+*[[English]]-[[Russian]]: [[:ru:дождь|дождь]] /dojd'/ ([[rain]]) [[dangerous]]  ([[[:ru:для|для]] роз /dlya roz/ ([[for]] [[rose]]s)
