--- a/wiki/dangerous.wikitext
+++ b/wiki/dangerous.wikitext
@@ -23,6 +23,7 @@
 *French: [[dangereux]] ''m'', [[dangereuse]] ''f''
 *German: [[gefährlich]]
 *Greek: [[επικίνδυνος]] ''m'', [[επικίνδυνη]] ''f'', [[επικίνδυνο]] ''n''
+*Hebrew: [[:he:מסוכן|מסוכן]] /me'sukan/
 *Italian: [[pericoloso]] ''m'', [[pericolosa]] ''f''
 *Portuguese: [[perigoso]] ''m'', [[perigosa]] ''f''
 *Russian: [[:ru:опасный|опасный]] ''m'', [[:ru:опасная|опасная]] ''f'', [[:ru:опасное|опасное]] ''n''
@@ -30,4 +31,4 @@
 *Swedish: [[farlig]], [[farligt]]<!-- what's the difference?? -->
 
 ==Multilingual links==
-*[[English]]-[[Russian]]: [[:ru:дождь|дождь]] /dojd'/ ([[rain]]) [[dangerous]]  ([[[:ru:для|для]] роз /dlya roz/ ([[for]] [[rose]]s)
+*[[English]]-[[Russian]]: [[:ru:дождь|дождь]] /dojd'/ ([[rain]]) [[dangerous]] [[:ru:для|для]] роз /dlya roz/ ([[for]] [[rose]]s)
