--- a/wiki/dangerous.wikitext
+++ b/wiki/dangerous.wikitext
@@ -30,5 +30,5 @@
 *Spanish: [[peligroso]] ''m'', [[peligrosa]] ''f''
 *Swedish: [[farlig]], [[farligt]]<!-- what's the difference?? -->
 
-==Multilingual links==
-*[[English]]-[[Russian]]: [[:ru:дождь|дождь]] /dojd'/ ([[rain]]) [[dangerous]] [[:ru:для|для]] роз /dlya roz/ ([[for]] [[rose]]s)
+==Multilingual associations==
+*[[[Russian]]: [[:ru:дождь|дождь]] /dojd'/ ([[rain]]) [[dangerous]] [[:ru:для|для]] роз /dlya roz/ ([[for]] [[rose]]s)
