sharper cat <cariostat#515237>

--- a/wiki/cariostat.wikitext
+++ b/wiki/cariostat.wikitext
@@ -2,5 +2,4 @@ A '''cariostat''' is a machine for detecting dental [[caries]], especially in ch
 
 {{stub}}
 
-[[Category:Dentistry]]
-[[Category:Medical equipment]]
+[[Category:Dental equipment]]
