--- a/wiki/%E7%B0%BE.wikitext
+++ b/wiki/%E7%B0%BE.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': a blind, screen, curtain
+* '''Common Meaning''': a [[blind]], [[screen]], [[curtain]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -35,7 +35,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[れん]] (ren)
@@ -45,9 +45,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 렴>염
+* '''[[Hangeul]]''': [[렴]]>[[염]]
 
 * '''[[Eumhun]] reading''': 
 
