--- a/wiki/chest.wikitext
+++ b/wiki/chest.wikitext
@@ -13,6 +13,7 @@
 ====Translations====
 *French: [[poitrine]] ''f''
 *Italian: [[petto]] ''m''
+*{{pl}}: [[klatka]] ''f'' [[piersiowa]]
 *{{ru}}: [[:ru:грудь|грудь]] /grud'/
 *{{sk}}: [[hruď]] ''f'', [[hrudník]] ''m''
 
@@ -30,6 +31,7 @@
 # Chest of drawers
 
 ====Translations====
+*{{pl}}: (1) [[kufer]] ''m'', [[skrzynia]] ''f''; (2) [[komoda]] ''f''
 *{{sk}} [[debna#Slovak|debna]] ''f'', (1) [[truhla#truhla|truhla]] ''f'' (1); [[bielizník#Slovak|bielizník]] ''m'' (2)
 
 ==== Related terms ====
