--- a/wiki/A-sharp_major.wikitext
+++ b/wiki/A-sharp_major.wikitext
@@ -10,4 +10,5 @@
 *Finnish: [[Ais-duuri]]
 *French: [[la dièse majeur]]
 *Italian: [[la diesis maggiore]]
+*{{pl}}: [[Ais-dur]]
 *Russian: [[ля-диез мажор]]
