/* Related Terms */ <triangle#3856>

--- a/wiki/triangle.wikitext
+++ b/wiki/triangle.wikitext
@@ -14,7 +14,7 @@
 *[[Bermuda Triangle]]
 *[[circular triangle]]
 *[[Devil's Triangle]]
-*[[equilatetral triangle]]
+*[[equilateral triangle]]
 *[[eternal triangle]]
 *[[golden triangle]]
 *[[isoceles triangle]]
