/* Translations */ dewikify well-known langs; modern greek -> greek; remove blank genders <scandium#30009>

--- a/wiki/scandium.wikitext
+++ b/wiki/scandium.wikitext
@@ -12,75 +12,75 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*[[Afrikaans]]: [[skandium]]
-*[[Albanian]]: [[skandium]]
-*[[Arabic]]: [[سكانديوم]]
-*[[Armenian]]: [[scandiumu]]
+*Afrikaans: [[skandium]]
+*Albanian: [[skandium]]
+*Arabic: [[سكانديوم]]
+*Armenian: [[scandiumu]]
 *[[Basque]]: [[eskandioa]]
-*[[Belarussian]]: [[Скандый]]
-*[[Bosnian]]: [[skandij]]
+*Belarusian: [[Скандый]]
+*Bosnian: [[skandij]]
 *[[Breton]]: [[skandiom]]
-*[[Bulgarian]]: [[скандий]] ''m''
+*Bulgarian: [[скандий]] ''m''
 *[[Catalan]]: [[escandi]]
-*[[Chinese]]: [[鈧]]
+*Chinese: [[鈧]]
 *[[Cornish]]: [[scandyum]]
-*[[Croatian]]: [[skandij]]
-*[[Czech]]: [[skandium]]
-*[[Danish]]: [[skandium]]
-*[[Dutch]]: scandium ''n''
+*Croatian: [[skandij]]
+*Czech: [[skandium]]
+*Danish: [[skandium]]
+*Dutch: scandium ''n''
 *[[Esperanto]]: [[skandio]]
-*[[Estonian]]: [[skandium]]
+*Estonian: [[skandium]]
 *[[Faroese]]: [[skandium]]
-*[[Finnish]]: [[skandium]]
-*[[French]]: scandium ''m''
+*Finnish: [[skandium]]
+*French: scandium ''m''
 *[[Frisian]]: scandium
 *[[Friulian]]: [[scandi]]
 *[[Gallegan]]: [[escandio]]
-*[[Georgian]]: [[სკანდიუმი]]
-*[[German]]: [[Skandium]] ''n'' (from Vanderkrogt's site)
-*[[German]]: Scandium ''n''
-*[[Hebrew]]: [[סקנדיום]]
-*[[Hungarian]]: [[szkandium]]
-*[[Icelandic]]: [[skandín]]
+*Georgian: [[სკანდიუმი]]
+*German: [[Skandium]] ''n'' (from Vanderkrogt's site), Scandium ''n''
+*Greek: [[Σκανdιο]]
+*Hebrew: [[סקנדיום]]
+*Hungarian: [[szkandium]]
+*Icelandic: [[skandín]]
 *[[Interlingua]]: scandium
-*[[Irish]]: [[scaindiam]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*[[Italian]]: [[scandio]] ''m''
-*[[Japanese]]: [[スカンジウム]]
+*Irish: [[scaindiam]]
+*Italian: [[scandio]] ''m''
+*Japanese: [[スカンジウム]]
 *[[Kashmiri]]: [[skónd]]
-*[[Kazakh]]: [[Скандий]]
-*[[Latvian]]: [[skandijs]]
-*[[Lithuanian]]: [[skandis]]
-*[[Luxembourgish]]: [[skandium]]
-*[[Macedonian]]: [[Скандиум]]
-*[[Malay]]: [[skandium]]
-*[[Maltese]]: [[skandjum]]
+*Kazakh: [[Скандий]]
+*Latvian: [[skandijs]]
+*Lithuanian: [[skandis]]
+*Luxembourgish: [[skandium]]
+*Macedonian: [[Скандиум]]
+*Malay: [[skandium]]
+*Maltese: [[skandjum]]
 *[[Manx]]: [[scandjum]]
-*[[Modern Greek]]: [[Σκανdιο]] '' ''
-*[[Mongolian]]: [[Сканди]]
-*[[Norwegian]]: scandium
-*[[Polish]]: [[skand]] '' ''
-*[[Portuguese]]: [[escândio]] ''m''
-*[[Romanian]]: [[scandiu]] ''n''
-*[[Russian]]: [[Скандий]] '' ''
+*Mongolian: [[Сканди]]
+*Norwegian: scandium
+*Polish: [[skand]]
+*Portuguese: [[escândio]] ''m''
+*Romanian: [[scandiu]] ''n''
+*Russian: [[Скандий]]
 *[[Scottish Gaelic]]: [[scaindiam]]
-*[[Serbian]]: [[Скандиjум]]
-*[[Slovak]]: [[skandium]]
-*[[Slovenian]]: [[skandij]]
-*[[Spanish]]: [[escandio]] ''m''
-*[[Swedish]]: [[skandium]]
-*[[Tajik]]: [[skandi']]
-*[[Thai]]: [[สแคนเดียม]]
-*[[Turkish]]: [[skandiyum]]
-*[[Ukrainian]]: [[Скандiй]]
-*[[Uzbek]]: [[Скандий]]
-*[[Vietnamese]]: [[scandi]]
-*[[Welsh]]: [[scandiwm]]
+*Serbian: [[Скандиjум]]
+*Slovak: [[skandium]]
+*Slovenian: [[skandij]]
+*Spanish: [[escandio]] ''m''
+*Swedish: [[skandium]]
+*Tajik: [[skandi']]
+*Thai: [[สแคนเดียม]]
+*Turkish: [[skandiyum]]
+*Ukrainian: [[Скандiй]]
+*Uzbek: [[Скандий]]
+*Vietnamese: [[scandi]]
+*Welsh: [[scandiwm]]
 |}
 |}
+
 ====External links====
 For etymology and more information refer to:
 http://elements.vanderkrogt.net/elem/sc.html
