--- a/wiki/elucidate.wikitext
+++ b/wiki/elucidate.wikitext
@@ -1,4 +1,6 @@
- ===Etymology===
+==English==
+ 
+===Etymology===
 
  ===Pronunciation===
 
@@ -19,3 +21,6 @@
  ====Related words====
 
  ====References====
+
+==[[multilingual associations]]==
+*[[Russian]]: [[:ru:еле|еле]] /ele/ ([[scarcely]]) усидеть /usidet'/ (to [[remain]] sitting)  to '''elucidate'''
