wikification; +ko compound <道#28754>

--- a/wiki/%E9%81%93.wikitext
+++ b/wiki/%E9%81%93.wikitext
@@ -11,13 +11,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#path, road, street
-*# method, way
-
+*#[[path]], [[road]], [[street]]
+*# [[method]], [[way]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,7 +32,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[どう]] (dō), [[とう]] (tō)
@@ -43,7 +42,7 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
 * '''[[Hangeul]]''': 도
 
@@ -53,6 +52,9 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': do
 ** '''[[McCune-Reischauer]]''': to
 ** '''[[Yale]]''': to
+
+* '''Compounds''':
+** [[跆拳道]] (태권도): [[taekwondo]]
 
 ----
 
