wikification; +ko compound <拳#16143>

--- a/wiki/%E6%8B%B3.wikitext
+++ b/wiki/%E6%8B%B3.wikitext
@@ -11,13 +11,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#fist
-*# various forms of boxing
-
+*#[[fist]]
+*# various forms of [[boxing]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,7 +32,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[けん]] (ken), [[げん]] (gen)
@@ -43,9 +42,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 권
+* '''[[Hangeul]]''': [[권]]
 
 * '''[[Eumhun]] reading''': 
 
@@ -53,6 +52,9 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': gwon
 ** '''[[McCune-Reischauer]]''': kwŏn
 ** '''[[Yale]]''': kwen
+
+* '''Compounds''':
+** [[跆拳道]] (태권도): [[taekwondo]]
 
 ----
 
