--- a/wiki/%E8%B7%86.wikitext
+++ b/wiki/%E8%B7%86.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': trample
+* '''Common Meaning''': [[trample]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,7 +30,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[たい]] (tai), [[だい]] (dai)
@@ -40,9 +40,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 태
+* '''[[Hangeul]]''': [[태]]
 
 * '''[[Eumhun]] reading''': 
 
@@ -50,6 +50,9 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': tae
 ** '''[[McCune-Reischauer]]''': t'ae
 ** '''[[Yale]]''': thya
+
+* '''Compounds''':
+** [[跆拳道]] (태권도): [[taekwondo]]
 
 ----
 
