--- a/wiki/%D7%A9%D7%97%D7%95%D7%A8.wikitext
+++ b/wiki/%D7%A9%D7%97%D7%95%D7%A8.wikitext
@@ -1,4 +1,5 @@
+== Hebrew ==
+=== Adjective ===
+'''שחור''' (sha'chor) ''m''; ''f'': [[שחורה]] (sh'cho'ra)
 
-== Hebrew: ==
- שחור (Sha'chor) m, שחורה (Sh'cho'ra) f 
-black
+# [[black]]
