/* Related terms */ ++ <chest#39593>

--- a/wiki/chest.wikitext
+++ b/wiki/chest.wikitext
@@ -35,6 +35,7 @@
 *{{sk}} [[debna#Slovak|debna]] ''f'', (1) [[truhla#truhla|truhla]] ''f'' (1); [[bielizník#Slovak|bielizník]] ''m'' (2)
 
 ==== Related terms ====
+*[[chest of drawers]]
 *[[hope chest]]
 *[[treasure chest]]
 *[[war chest]]
