/* Translations */ remove russian translationinterwiki <chest#39593>

--- a/wiki/chest.wikitext
+++ b/wiki/chest.wikitext
@@ -14,7 +14,7 @@
 *French: [[poitrine]] ''f''
 *Italian: [[petto]] ''m''
 *{{pl}}: [[klatka]] ''f'' [[piersiowa]]
-*{{ru}}: [[:ru:грудь|грудь]] /grud'/
+*{{ru}}: [[грудь]] (grud')
 *{{sk}}: [[hruď]] ''f'', [[hrudník]] ''m''
 
 ====Related terms====
