wikification; +ko compound <寒#14209>

--- a/wiki/%E5%AF%92.wikitext
+++ b/wiki/%E5%AF%92.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': cold, wintry, chilly
+* '''Common Meaning''': [[cold]], [[wintry]], [[chilly]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,7 +30,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[かん]] (kan)
@@ -40,13 +40,16 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''Pronunciation''': 한
+* '''Pronunciation''': [[한]]
 
 * '''Romanization'''
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': han
 ** '''[[McCune-Reischauer]]''': han
+
+* '''Compounds''':
+** [[寒心]] ([[한심]]): [[miserable]]
 
 ----
 
