/* [[Korean]] [[Hanja]] */ +compound <心#9067>

--- a/wiki/%E5%BF%83.wikitext
+++ b/wiki/%E5%BF%83.wikitext
@@ -271,7 +271,7 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
 * '''[[Hangeul]]''': 심
 
@@ -281,6 +281,9 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': sim
 ** '''[[McCune-Reischauer]]''': sim
 ** '''[[Yale]]''': sim
+
+* '''Compounds''':
+** [[寒心]] ([[한심]]): [[miserable]]
 
 ----
 
