fmt; add name of translation's language! <chest of drawers#52139>

--- a/wiki/chest_of_drawers.wikitext
+++ b/wiki/chest_of_drawers.wikitext
@@ -1,6 +1,8 @@
 ==English==
 ===Noun===
-'''chest of drawers''' (''chests of drawers'')
+'''[[chest]] of [[drawer]]s''' (''chests of drawers'')
+
 #piece of furniture for the storage of clean clothes
+
 ====Translations====
-* [[bielizník#Slovak|bielizník]] ''m''
+*Slovak: [[bielizník#Slovak|bielizník]] ''m''
