--- a/wiki/esteem.wikitext
+++ b/wiki/esteem.wikitext
@@ -3,11 +3,17 @@
 ===Pronunciation===
 IPA: ɛsˈtim
 
+===Noun===
+
+====Translations====
+*[[Russian]]: [[:ru:уважение|уважение]] /uvajenie/
+*[[Hebrew]]: [[:he:כבוד|כבוד]] /kavod/
+ 
 ===Verb===
 
 # to assign to a person or thing a high value. '''Esteem''' for a person or a thing is an assessment of its or his or her high value.
 
-==Translations==
+====Translations====
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -15,3 +21,7 @@ IPA: ɛsˈtim
 *Dutch: [[achten]]
 |}
 |}
+*[[Russian]]: [[:ru:уважать|уважать]] /uvajat'/
+
+==[[multilingual associations]]==
+*[[Russian]]: гостям /gostyam/ (to [[guest]]s) - '''esteem'''
