--- a/wiki/batman.wikitext
+++ b/wiki/batman.wikitext
@@ -14,6 +14,7 @@
 *German: Batman
 *Italian: Batman
 *Spanish: Batman
+*Latvian: Betmens
 
 ===See also===
 *[[w:Batman|Wikipedia article on Batman]]
