/* Translations */ <Count Dracula#53052>

--- a/wiki/Count_Dracula.wikitext
+++ b/wiki/Count_Dracula.wikitext
@@ -11,6 +11,7 @@
 *French: [[comte Dracula]] ''m''
 *German: [[Graf Dracula]]
 *Italian: [[Conte Dracula]] ''m''
+*Latvian: [[Grāfs Drakula]]
 
 ===See also===
 *[[Dracula]]
