--- a/wiki/eternity.wikitext
+++ b/wiki/eternity.wikitext
@@ -1,3 +1,5 @@
+==English==
+
 ===Pronounciation===
 {{substub}}
                                                                                                                                                       
@@ -11,7 +13,12 @@
 ===Translations===
 *[[Czech]]: [[věčnost]] ''f''
 *[[French]]: [[éternité]] ''f''
+*[[Hebrew]]: [[:he:נצח|נצח]]  
+*[[Russian]]: [[:ru:вечность|вечность]] /vechnost'/ 
 
 ===See Also===
 *[[forever]]
 *[[evermore]]
+
+==[[multilingual associations]]==
+*[[Russian]]: тяните /tyanite/ ([[extend]]) нити /niti/ ([[thread]]s) в /v/ ([[into]]) '''eternity'''
