--- a/wiki/they.wikitext
+++ b/wiki/they.wikitext
@@ -24,26 +24,38 @@ The third person, nominative case, usually plural, but sometimes used incorrectl
 **If a ''[[child]]'' is too short for the [[rollercoaster]], ''it'' will not be allowed to ride.
 
 ====Translations====
+*Arabic: [[هما|هُمَا]] (húmaː) ''dual'', [[‎‎هم|هُمْ]] / [[‎‎هم|هُمُ]] (hum/húmu) ''pl'', [[‎‎هن|هُنَّ]] (húnna) ''f/pl''
 *Bulgarian: [[те]] (te)
 *[[Chinese]]: [[他们]], [[她们]], [[它们]], [[人们]]
 *Dutch: [[zij]], [[ze]]
+*[[Dyirbal]]: ''(no third-person pronoun)''
 *[[Esperanto]]: [[ili]]
 *Finnish: [[he#Finnish|he]] (1, ''of people''), [[ne#Finnish|ne]] (1, ''of things and animals'')
+*[[Fijian]]: [[rau]] ''dual'', [[iratou]] ''[[paucal]]'', [[ira]] ''pl''
 *French: [[ils]] ''m'', [[elles]] ''f''
 *German: [[sie]]
+*[[Hausa]]: [[súu]] ''(independent form)''
+*Hawaiian: [[lāua]] ''dual'', [[lākou]] ''pl''
+*Hebrew: [[הם]] (hēm) ''m'', [[הן]] (hēn) ''f''
+*Hungarian: [[ők]]
 *[[Ido]]: [[li]], [[ili]] ''m'', [[eli]] ''f'', [[oli]] ''things''
 *Indonesian: [[mereka]]
 *[[Interlingua]]: [[illes]] ''m'' (a group with at least one male), [[illas]] ''f'' (a group of females), illos ''n'' (a group of things) (1); [[uno]], [[on]] (2)
 *Italian: [[essi]], [[loro]]
-*Japanese: [[彼ら]] / [[彼等]] (かれら, karera)
+*Japanese: [[彼ら]] / [[彼等]] ([[かれら]], karéra)
 *Korean: [[그들]] (geudeul)
 *Portuguese: [[eles]] ''m'', [[elas]] ''f''
+*[[Quechua]]: [[paykuna]]
 *Romanian: [[ei]] ''m'', [[ele]] ''f''
 *Russian: [[они]] (oní)
 *Slovene: [[oni]]
 *Spanish: [[ellos]] ''m'', [[ellas]] ''f''
+*Swahili: [[wao]]
 *Swedish: [[de]], [[dom]]
+*[[Tagalog]]: [[nila]] ''(ng form)'', [[kanila]] ''(sa form)'', [[sila]] ''(unmarked form)''
 *Thai: [[พวกเขา]] (puak-kao)
 *[[Tok Pisin]]: [[ol]]
-
+*Vietnamese: [[họ]]
+*[[!Xũ]]: [[si]] (people), [[hi]] (animals, things)
+*[[Yoruba]]: [[wọ́n]] ''weak pronoun'', [[àwọn]] ''strong pronoun''
 [[Category:English third person pronouns]]
