--- a/wiki/they.wikitext
+++ b/wiki/they.wikitext
@@ -31,7 +31,7 @@ The third person, nominative case, usually plural, but sometimes used incorrectl
 *[[Dyirbal]]: ''(no third-person pronoun)''
 *[[Esperanto]]: [[ili]]
 *Finnish: [[he#Finnish|he]] (1, ''of people''), [[ne#Finnish|ne]] (1, ''of things and animals'')
-*[[Fijian]]: [[rau]] ''dual'', [[iratou]] ''[[paucal]]'', [[ira]] ''pl''
+*[[Fijian]]: [[rau]] ''(dual)'', [[iratou]] ''([[paucal]])'', [[ira]] ''(pl)''
 *French: [[ils]] ''m'', [[elles]] ''f''
 *German: [[sie]]
 *[[Hausa]]: [[súu]] ''(independent form)''
