--- a/wiki/exaggerate.wikitext
+++ b/wiki/exaggerate.wikitext
@@ -6,13 +6,16 @@
 
 
 ====Translations====
-*Chinese: [[誇大]], [[夸大]]
+*Chinese: [[:zh:誇大|誇大]], [[:zh:夸大|夸大]]
 *Dutch: [[overdrijven]]
-*French: [[exagérer]]
-*German: [[übertreiben]]
-*Greek: [[υπερβάλει]]
-*Italian: [[esageri]]
-*Russian: [[утрируйте]]
-*Spanish: [[exagere]]
+*French: [[:fr:exagérer|exagérer]]
+*German: [[:de:übertreiben|übertreiben]]
+*Greek: [[:el:υπερβάλει|υπερβάλει]]
+*Italian: [[:it:esageri|esageri]]
+*Russian: [[:ru:преувиличивать|преувиличивать]], [[:ru:утрировать|утрировать]]
+*Spanish: [[:es:exagere|exagere]]
 
 [[Category:Transitive Verbs]]
+
+==[[multilingual associations]]==
+*[[Russian]]: [[:ru:егоза|егоза]] /egoza/ ([[fidget]]) [[:ru:жар|жар]]у /jaru/ ([[hot]] [[weather]])  '''exaggerates'''
