/* Translations */ <Santa Claus#63019>

--- a/wiki/Santa_Claus.wikitext
+++ b/wiki/Santa_Claus.wikitext
@@ -14,7 +14,7 @@
 *Finnish: [[Joulupukki]]
 *French: [[Saint Nicolas]] ''m'', [[Père Noël]] ''m''
 *Italian: [[Babbo Natale]] ''m''
-*German: [[Sankt Nikolaus]] ''m'', [[Weihnachtsmann]] ''m'', [[Chriskind]] ''m'' (''in Austria''), [[Samichlaus]] ''m'' (''in Switzerland'')
+*German: [[Sankt Nikolaus]] ''m'', [[Weihnachtsmann]] ''m'', [[Christkind]] ''m'' (''in Austria''), [[Samichlaus]] ''m'' (''in Switzerland'')
 *Norwegian: [[Julenissen]]
 *Portuguese: [[Papai Noel]] (''in Brazil'')
 *Spanish: [[Viejito Pascuero]] (''in Chile'')
