--- a/wiki/butterfly.wikitext
+++ b/wiki/butterfly.wikitext
@@ -86,7 +86,7 @@
 *[[Frisian]]: [[flinter]]
 *[[Galician]]: [[volvoreta]]
 *[[Gen]]: [[abèbe]], [[abè]], [[abey]]
-*German: [[Schmetterling]] ''m'', [[Falter]] (''poetic'')
+*German: [[Schmetterling]] ''m'', [[Falter]] (''poetic''), Summervogl (in Switzerland)
 *Georgian: [[პეპელა]] (pepela)
 *Greek: [[πεταλούδα]] ''f'' (petalouda)
 *[[Gooniyandi]]: [[malimali]]
