format <Christmas Eve#35168>

--- a/wiki/Christmas_Eve.wikitext
+++ b/wiki/Christmas_Eve.wikitext
@@ -1,12 +1,15 @@
-===[[Pronunciation]]===
+==English==
 
+===Pronunciation===
 '''Christ*mas Eve'''
 *[[IPA]]: //
 *[[SAMPA]]: //
 KRIST-muhs eev
-===[[]]===
 
-#A day before [[Christmas]].
-===[[Translations]]===
+===Noun===
+'''{{PAGENAME}}'''
+: The day before [[Christmas]].
+
+====Translations====
 *{{ga}}: [[Óiche Nollag]]
 *[[Slovak]]: [[Štedrý Večer]] ''m''
