/* Translations */ +fr <Christmas Eve#35168>

--- a/wiki/Christmas_Eve.wikitext
+++ b/wiki/Christmas_Eve.wikitext
@@ -13,3 +13,4 @@ KRIST-muhs eev
 ====Translations====
 *{{ga}}: [[Óiche Nollag]]
 *[[Slovak]]: [[Štedrý Večer]] ''m''
+*{{fr}}: [[Réveillton de Noël]] ''m''
