/* Translations */ <Christmas Eve#35168>

--- a/wiki/Christmas_Eve.wikitext
+++ b/wiki/Christmas_Eve.wikitext
@@ -11,6 +11,7 @@ KRIST-muhs eev
 : The day before [[Christmas]].
 
 ====Translations====
+*{{He}}: [[ערב חג המולד]]
 *{{ga}}: [[Óiche Nollag]]
 *[[Slovak]]: [[Štedrý Večer]] ''m''
 *{{fr}}: [[Réveillon de Noël]] ''m''
