/* Translations */ +fr <butterfly#8176>

--- a/wiki/butterfly.wikitext
+++ b/wiki/butterfly.wikitext
@@ -269,6 +269,7 @@
 {|
 *Dutch: [[vlinderslag]] ''m''
 *Finnish: [[perhosuinti]], [[perhonen]]
+*{{fr}}: [[papillon]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
