--- a/wiki/chest.wikitext
+++ b/wiki/chest.wikitext
@@ -12,6 +12,7 @@
 
 ====Translations====
 *French: [[poitrine]] ''f''
+*{{He}}: [[חזה]] ''m''
 *Italian: [[petto]] ''m''
 *{{pl}}: [[klatka]] ''f'' [[piersiowa]]
 *{{ru}}: [[грудь]] (grud')
