--- a/wiki/exaggerate.wikitext
+++ b/wiki/exaggerate.wikitext
@@ -11,6 +11,7 @@
 *French: [[:fr:exagérer|exagérer]]
 *German: [[:de:übertreiben|übertreiben]]
 *Greek: [[:el:υπερβάλει|υπερβάλει]]
+*Hebrew: [[:he:להגזים]]
 *Italian: [[:it:esageri|esageri]]
 *Russian: [[:ru:преувиличивать|преувиличивать]], [[:ru:утрировать|утрировать]]
 *Spanish: [[:es:exagere|exagere]]
